This is my RG commit

--- a/.github/workflows/terrafom_app1.yml
+++ b/.github/workflows/terrafom_app1.yml
@@ -2,7 +2,7 @@ name: Terraform Plan and Apply Pipeline or workflow
 on:
   push:
     branches:
-      - main
+      - master
     paths:
       - 'env/dev/app1-rg_demo/**'
 
