--- a/.github/workflows/terrafom_app1.yml
+++ b/.github/workflows/terrafom_app1.yml
@@ -43,7 +43,7 @@ jobs:
         run: terraform plan -var-file="terraform.tfvars"
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/master'
         run: terraform apply -auto-approve -var-file="terraform.tfvars"
 
         
