--- a/.github/workflows/terrafom_app1.yml
+++ b/.github/workflows/terrafom_app1.yml
@@ -2,7 +2,7 @@ name: Terraform Plan and Apply Pipeline or workflow
 on:
   push:
     branches:
-      - master
+      - feature/resource-group
     paths:
       - 'env/dev/app1-rg_demo/**'
 
@@ -43,5 +43,5 @@ jobs:
         run: terraform plan -var-file="terraform.tfvars"
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/feature/resource-group'
         run: terraform apply -auto-approve -var-file="terraform.tfvars"
